Add Leaflet stylesheet and scripts

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,11 @@
     <title>DUNE - Control Center</title>
     <link rel="icon" type="image/vnd.microsoft.icon" href="images/dune.ico"/>
     <link rel="stylesheet" type="text/css" href="css/default.css"/>
+    <link rel="stylesheet" href="leaflet/leaflet.css"/>
+    <script src="leaflet/leaflet.js"></script>
+    <style>
+      #map{ width: 900px; height: 400px; }
+    </style>
 
     <script type="text/javascript" src="js/Icons.js"></script>
 
