Add rotated marker

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/default.css"/>
     <link rel="stylesheet" href="leaflet/leaflet.css"/>
     <script src="leaflet/leaflet.js"></script>
+    <script src="leaflet/leaflet.rotatedMarker.js"></script>
     <style>
       #map{ width: 900px; height: 400px; }
     </style>
